...
        }
    };

    return (
        <View style={styles.view}>
            <TextInput
                testID={"search-input"}
                style={styles.textInput}
                value={SearchText}
                placeholder='Paste link'
                onChangeText={(text) => {
                    Haptics.impactAsync(Haptics.ImpactFeedbackStyle.Light);
                    setSearch(text);
                }}
            />
            <TouchableOpacity
                testID={"search-button"}
                style={styles.button}
                onPress={search}
            >
                {
                    loading ?
                        <ActivityIndicator /> :
...
