...
        >
            <Text numberOfLines={3} style={styles.title}>{title}</Text>
            <Text numberOfLines={1}>{brand}</Text>
            <Text numberOfLines={1} style={styles.price}>R {price}</Text>
            <View style={styles.column}>
                <DropDownPicker
                    testID='select-category'
                    placeholder='Select a category'
                    open={open}
                    value={value}
                    items={items}
                    setOpen={setOpen}
                    setValue={setValue}
...
                />
            </View>

            <View>
                <Button
                    disabled={false}
                    testID='add-button'
                    loading={loading}
                    title={'Track Product'} 
                    onPress={trackProduct}
                />
            </View>
        </View>
...
