export const categoryTypes = [
    {
        title: "Grocery",
        description: "Everyday food and drink items",
        background: "#06BF9A",
        color: "#E1F7F3",
        label: "Grocery",
        value: "grocery",
    },
...
